# JECRC-Club-Management

./: LICENSE  README.md  app.py  pyproject.toml
templates/: carousel.html  clubdetails.html  footer.html  home.html  nav.html
