[tool.poetry]
name = "repl-nix-jecrc-club-management"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_jecrc_club_management"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
